terraform/vpc.tf
# create VPC
resource "aws_vpc" "vpc" {
  cidr_block = "10.0.0.0/22" # 1024 ip adresses
  tags = {
    Name = "deham19"
  }
}

# create public subnet in AZ-a
resource "aws_subnet" "public_subnet_1" {
  vpc_id     = aws_vpc.vpc.id
  cidr_block = "10.0.0.0/24" # 256 ip adresses  
  availability_zone = "us-west-2a"
  map_public_ip_on_launch = true
  tags = {
    Name = "public-subnet-1"
  }
}

# create private subnet in AZ-a 
resource "aws_subnet" "private_subnet_1" {
  vpc_id     = aws_vpc.vpc.id
  cidr_block = "10.0.1.0/24" # 256 ip adresses
  availability_zone = "us-west-2a"
  tags = {
    Name = "private-subnet-1"
  }
}

# create internet gateway 
resource "aws_internet_gateway" "internet_gateway" {
  vpc_id = aws_vpc.vpc.id
  tags = {
    Name = "capstone-igw"
  }
}

# public route table
resource "aws_route_table" "public_route_table" {
  vpc_id = aws_vpc.vpc.id
  tags = {
    Name = "public route table"
  }
}

# private route table 
resource "aws_route_table" "private_route_table" {
  vpc_id = aws_vpc.vpc.id
  tags = {
    Name = "private route table"
  }
}

# connect public route table to internet gateway 
resource "aws_route" "public_route" {
  route_table_id         = aws_route_table.public_route_table.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.internet_gateway.id
}

# connect route table to public subnet 
resource "aws_route_table_association" "public_subnet_1_association" {
  subnet_id      = aws_subnet.public_subnet_1.id
  route_table_id = aws_route_table.public_route_table.id
}

# Elastic IP for NAT gateway
resource "aws_eip" "elastic_ip" {
  domain = "vpc"
  tags = {
    Name = "nat-elastic-ip"
  }
}

# create NAT gateway 
resource "aws_nat_gateway" "nat_gateway" {
  allocation_id = aws_eip.elastic_ip.id
  subnet_id     = aws_subnet.public_subnet_1.id
  depends_on    = [aws_internet_gateway.internet_gateway]
  tags = {
    Name = "deham19-nat-gateway"
  }
}

# connect private route table to NAT gateway 
resource "aws_route" "private_route" {
  route_table_id         = aws_route_table.private_route_table.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.nat_gateway.id
}

# connect route table to private subnet 
resource "aws_route_table_association" "private_subnet_1_association" {
  subnet_id      = aws_subnet.private_subnet_1.id
  route_table_id = aws_route_table.private_route_table.id
}
